# lambda-miden-hack

./: .gitignore  README.md  makefile  miden-client.toml
client/: bun.lockb  components.json  next.config.mjs  package-lock.json  package.json
client/components/: empty-page.tsx  import-note.tsx  nav-bar.tsx  new-transaction.tsx  note-summary.tsx  share-as-url.tsx  sign-in.tsx  user-claim.tsx
client/consts/: cli-path.ts
client/helpers/: get-note-data.ts  miden-sync.ts  run-command.ts
client/pages/: _app.tsx  index.tsx
client/pages/api/: account.ts  claim-note.ts  generate-note-url.ts  note-data.ts  notes.ts  send.ts
client/scripts/: get-miden-cli-path.sh
client/src/: rust-component.tsx
client/stores/: useAccountStore.ts
client/types/: note.ts
miden-cli-local/: tx1.txt
miden-cli-local/src/: main.rs
react-client/: bun.lockb  package.json  tailwind.config.js
react-client/src/: App.tsx  index.js
react-client/src/components/: empty-page.tsx  import-note.tsx  new-transaction.tsx  note-summary.tsx  sign-in.tsx
react-client/src/components/ui/: button.tsx  dark-mode-button.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  toast.tsx
react-client/src/contexts/: miden-client-store.tsx
rust/: Cargo.toml
rust/src/: lib.rs
testing/: Cargo.toml  miden-client.toml
testing/src/: main.rs
typescript/: README.md  build.sh  bun.lockb  index.ts  package.json
typescript/helpers/: sync-state.ts
