[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
miden-client = { version = "0.4", features = ["sqlite", "tonic"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
uuid = { version = "1.6", features = ["serde", "v4"] }
figment = { version = "0.10.19", features = ["toml", "env"]}
serde = "1.0.203"
